tests/purs/failing/3765.out
Error found:
in module [33mMain[0m
at tests/purs/failing/3765.purs:6:23 - 6:24 (line 6, column 23 - line 6, column 24)

  Could not match type
  [33m            [0m
  [33m  ( b :: Int[0m
  [33m  ...       [0m
  [33m  | t0      [0m
  [33m  )         [0m
  [33m            [0m
  with type
  [33m            [0m
  [33m  ( a :: Int[0m
  [33m  ...       [0m
  [33m  | t0      [0m
  [33m  )         [0m
  [33m            [0m

while trying to match type [33m{ b :: Int[0m
                           [33m| t0      [0m
                           [33m}         [0m
  with type [33mt1[0m
while checking that expression [33mx[0m
  has type [33m{ b :: Int[0m
           [33m| t0      [0m
           [33m}         [0m
in value declaration [33mmkTricky[0m

where [33mt1[0m is an unknown type
      [33mt0[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
or to contribute content related to this error.

